--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-dev": "webpack -w --mode none",
     "build-prod": "webpack --mode production",
-    "start": "nodemon server/index.js"
+    "start": "nodemon server/index.js",
+    "data-insert": "mysql -u root -p < /Users/winstonpantelakos/hr-bge0-mvp/db/schema.sql"
   },
   "repository": {
     "type": "git",
@@ -35,7 +36,11 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "axios": "^0.25.0",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
+    "mysql2": "^2.3.3",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "winston": "^3.4.0"
