--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "bluebird": "^3.7.2",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
